--- a/gatekeeper/kustomization.yaml
+++ b/gatekeeper/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- git@github.com:vrajendra/terraformcode_sample//base/library 
+- git@github.com:vrajendra/terraformcode_sample//base/library
+- Chart.yaml  
