--- a/gatekeeper/kustomization.yaml
+++ b/gatekeeper/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+helmCharts:
+- name: gatekeeper
+  repo:  https://open-policy-agent.github.io/gatekeeper/charts
+  version: 14.3.0
 resources:
 - git@github.com:vrajendra/terraformcode_sample//base/library
-- Chart.yaml  
