--- a/gatekeeper/kustomization.yaml
+++ b/gatekeeper/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Kustomization
 
 resources:
 - git@github.com:vrajendra/terraformcode_sample//base/library
-- requirements.yaml  
+- ./requirements.yaml  
