--- a/gatekeeper/kustomization.yaml
+++ b/gatekeeper/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+base:
+- git@github.com:vrajendra/terraformcode_sample//base/library    
 resources:
-- git@github.com:vrajendra/terraformcode_sample//base/library
 - ./all.yaml  
